Fix calendar events covers date header

--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -321,6 +321,7 @@
   position: sticky;
   top: 0;
   border-bottom: 1px solid var(--color-cell-border-dark);
+  z-index: var(--z-index-day-header-row);
 }
 
 .sticky-left {
